@@ -15,7 +15,6 @@ MCV:
 		DecorationBounds: 36,36
 	Mobile:
 		Speed: 71
-		Crushes: wall, crate, infantry, mine, lightwall, TibShimmeringEffect
 	Health:
 		HP: 1200
 	Armor:
@@ -67,7 +66,6 @@ MOV:
 		DecorationBounds: 36,36
 	Mobile:
 		Speed: 71
-		Crushes: wall, crate, infantry, mine, lightwall, TibShimmeringEffect
 	Health:
 		HP: 200
 	Armor:
@@ -167,11 +165,11 @@ MNLYNOD:
 		Type: Heavy
 	Mobile:
 		Speed: 128
-		Crushes: wall, crate, infantry, mine, lightwall, TibShimmeringEffect
 	RevealsShroud:
 		Range: 5c0
 	Minelayer:
 		Mine: MINV
+		RearmBuildings: fix, fix_nod
 	MineImmune:
 	AmmoPool:
 		Ammo: 5
@@ -201,11 +199,11 @@ MNLYGDI:
 		Type: Heavy
 	Mobile:
 		Speed: 128
-		Crushes: wall, crate, infantry, mine, lightwall, TibShimmeringEffect
 	RevealsShroud:
 		Range: 5c0
 	Minelayer:
 		Mine: MINP
+		RearmBuildings: fix, fix_nod
 	MineImmune:
 	AmmoPool:
 		Ammo: 5
@@ -834,7 +832,6 @@ HTNK:
 		Queue: Vehicle.GDI
 		Description: Heavily armored GDI Tank.\nCan attack Aircraft.\n  Strong vs Everything
 	Mobile:
-		Crushes: wall, heavywall, lightwall, crate, infantry, TibShimmeringEffect, mine
 		Speed: 56
 		TurnSpeed: 3
 		-RequiresCondition:
